@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-13T08:13:56Z",
+  "timestamp" : "2022-05-14T01:10:58Z",
   "count_outdated" : 264,
   "uniques_outdated" : 130,
-  "count" : 299,
+  "count" : 300,
   "uniques" : 155,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-05-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
