@@ -1,3 +1,10 @@
+2022-05-14T01:10:58Z:
+* notice: last 14d: all unq: 36 14
+* notice: prev accum: outdated-all outdated-unq / all unq: 264 130 / 299 155
+* notice: next accum: outdated-all outdated-unq / all unq: 264 130 / 300 155
+* notice: prev json diff / prev day diff: unq all: +0 +1 -0 -0 / +0 +1 -0 -0
+* notice: changed dates: [2022-05-13]
+
 2022-05-13T08:13:56Z:
 * notice: last 14d: all unq: 35 14
 * notice: prev accum: outdated-all outdated-unq / all unq: 264 130 / 298 154
